; ModuleID = '/home/carl/AnghaBench/vlc/modules/video_filter/deinterlace/extr_algo_ivtc.c_IVTCCadenceDetectAlgoScores.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/video_filter/deinterlace/extr_algo_ivtc.c_IVTCCadenceDetectAlgoScores.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { %struct.TYPE_11__* }
%struct.TYPE_11__ = type { %struct.TYPE_7__, %struct.TYPE_9__ }
%struct.TYPE_7__ = type { %struct.TYPE_8__** }
%struct.TYPE_8__ = type { i32 }
%struct.TYPE_9__ = type { i32*, i32*, i32*, i32*, i32* }

@NUM_CADENCE_POS = common dso_local global i32 0, align 4
@pi_best_field_pairs = common dso_local global i64** null, align 8
@CADENCE_POS_PROGRESSIVE = common dso_local global i64 0, align 8
@CADENCE_POS_TFF_FIRST = common dso_local global i32 0, align 4
@CADENCE_POS_TFF_END = common dso_local global i32 0, align 4
@CADENCE_POS_BFF_FIRST = common dso_local global i32 0, align 4
@CADENCE_POS_BFF_END = common dso_local global i32 0, align 4
@IVTC_LATEST = common dso_local global i64 0, align 8
@pi_detected_pos_to_cadence_pos = common dso_local global i32* null, align 8
@CADENCE_POS_INVALID = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_10__*)* @IVTCCadenceDetectAlgoScores to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @IVTCCadenceDetectAlgoScores(%struct.TYPE_10__* %0) #0 {
  %2 = alloca %struct.TYPE_10__*, align 8
  %3 = alloca %struct.TYPE_11__*, align 8
  %4 = alloca %struct.TYPE_9__*, align 8
  %5 = alloca %struct.TYPE_8__*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca double, align 8
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  %20 = alloca i32, align 4
  %21 = alloca i32, align 4
  %22 = alloca i32, align 4
  %23 = alloca i32, align 4
  %24 = alloca i32, align 4
  %25 = alloca i32, align 4
  %26 = alloca i32, align 4
  %27 = alloca i32, align 4
  %28 = alloca i32, align 4
  %29 = alloca i32, align 4
  store %struct.TYPE_10__* %0, %struct.TYPE_10__** %2, align 8
  %30 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %31 = icmp ne %struct.TYPE_10__* %30, null
  %32 = zext i1 %31 to i32
  %33 = call i32 @assert(i32 %32)
  %34 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %35 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %34, i32 0, i32 0
  %36 = load %struct.TYPE_11__*, %struct.TYPE_11__** %35, align 8
  store %struct.TYPE_11__* %36, %struct.TYPE_11__** %3, align 8
  %37 = load %struct.TYPE_11__*, %struct.TYPE_11__** %3, align 8
  %38 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %37, i32 0, i32 1
  store %struct.TYPE_9__* %38, %struct.TYPE_9__** %4, align 8
  %39 = load %struct.TYPE_11__*, %struct.TYPE_11__** %3, align 8
  %40 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %39, i32 0, i32 0
  %41 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %40, i32 0, i32 0
  %42 = load %struct.TYPE_8__**, %struct.TYPE_8__*** %41, align 8
  %43 = getelementptr inbounds %struct.TYPE_8__*, %struct.TYPE_8__** %42, i64 2
  %44 = load %struct.TYPE_8__*, %struct.TYPE_8__** %43, align 8
  store %struct.TYPE_8__* %44, %struct.TYPE_8__** %5, align 8
  %45 = load %struct.TYPE_8__*, %struct.TYPE_8__** %5, align 8
  %46 = icmp ne %struct.TYPE_8__* %45, null
  %47 = zext i1 %46 to i32
  %48 = call i32 @assert(i32 %47)
  %49 = load i32, i32* @NUM_CADENCE_POS, align 4
  %50 = zext i32 %49 to i64
  %51 = call i8* @llvm.stacksave()
  store i8* %51, i8** %6, align 8
  %52 = alloca i32, i64 %50, align 16
  store i64 %50, i64* %7, align 8
  store i32 0, i32* %8, align 4
  br label %53

53:                                               ; preds = %99, %1
  %54 = load i32, i32* %8, align 4
  %55 = load i32, i32* @NUM_CADENCE_POS, align 4
  %56 = icmp slt i32 %54, %55
  br i1 %56, label %57, label %102

57:                                               ; preds = %53
  %58 = load %struct.TYPE_9__*, %struct.TYPE_9__** %4, align 8
  %59 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %58, i32 0, i32 0
  %60 = load i32*, i32** %59, align 8
  %61 = load i64**, i64*** @pi_best_field_pairs, align 8
  %62 = load i32, i32* %8, align 4
  %63 = sext i32 %62 to i64
  %64 = getelementptr inbounds i64*, i64** %61, i64 %63
  %65 = load i64*, i64** %64, align 8
  %66 = getelementptr inbounds i64, i64* %65, i64 0
  %67 = load i64, i64* %66, align 8
  %68 = getelementptr inbounds i32, i32* %60, i64 %67
  %69 = load i32, i32* %68, align 4
  %70 = load %struct.TYPE_9__*, %struct.TYPE_9__** %4, align 8
  %71 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %70, i32 0, i32 0
  %72 = load i32*, i32** %71, align 8
  %73 = load i64**, i64*** @pi_best_field_pairs, align 8
  %74 = load i32, i32* %8, align 4
  %75 = sext i32 %74 to i64
  %76 = getelementptr inbounds i64*, i64** %73, i64 %75
  %77 = load i64*, i64** %76, align 8
  %78 = getelementptr inbounds i64, i64* %77, i64 1
  %79 = load i64, i64* %78, align 8
  %80 = getelementptr inbounds i32, i32* %72, i64 %79
  %81 = load i32, i32* %80, align 4
  %82 = add nsw i32 %69, %81
  %83 = load %struct.TYPE_9__*, %struct.TYPE_9__** %4, align 8
  %84 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %83, i32 0, i32 0
  %85 = load i32*, i32** %84, align 8
  %86 = load i64**, i64*** @pi_best_field_pairs, align 8
  %87 = load i32, i32* %8, align 4
  %88 = sext i32 %87 to i64
  %89 = getelementptr inbounds i64*, i64** %86, i64 %88
  %90 = load i64*, i64** %89, align 8
  %91 = getelementptr inbounds i64, i64* %90, i64 2
  %92 = load i64, i64* %91, align 8
  %93 = getelementptr inbounds i32, i32* %85, i64 %92
  %94 = load i32, i32* %93, align 4
  %95 = add nsw i32 %82, %94
  %96 = load i32, i32* %8, align 4
  %97 = sext i32 %96 to i64
  %98 = getelementptr inbounds i32, i32* %52, i64 %97
  store i32 %95, i32* %98, align 4
  br label %99

99:                                               ; preds = %57
  %100 = load i32, i32* %8, align 4
  %101 = add nsw i32 %100, 1
  store i32 %101, i32* %8, align 4
  br label %53

102:                                              ; preds = %53
  %103 = load i64, i64* @CADENCE_POS_PROGRESSIVE, align 8
  %104 = trunc i64 %103 to i32
  store i32 %104, i32* %9, align 4
  %105 = load i32, i32* %9, align 4
  %106 = sext i32 %105 to i64
  %107 = getelementptr inbounds i32, i32* %52, i64 %106
  %108 = load i32, i32* %107, align 4
  store i32 %108, i32* %10, align 4
  %109 = load i32, i32* @CADENCE_POS_TFF_FIRST, align 4
  store i32 %109, i32* %11, align 4
  %110 = load i32, i32* @CADENCE_POS_TFF_END, align 4
  store i32 %110, i32* %12, align 4
  %111 = load %struct.TYPE_8__*, %struct.TYPE_8__** %5, align 8
  %112 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %111, i32 0, i32 0
  %113 = load i32, i32* %112, align 4
  %114 = icmp ne i32 %113, 0
  br i1 %114, label %118, label %115

115:                                              ; preds = %102
  %116 = load i32, i32* @CADENCE_POS_BFF_FIRST, align 4
  store i32 %116, i32* %11, align 4
  %117 = load i32, i32* @CADENCE_POS_BFF_END, align 4
  store i32 %117, i32* %12, align 4
  br label %118

118:                                              ; preds = %115, %102
  %119 = load i32, i32* %11, align 4
  store i32 %119, i32* %13, align 4
  br label %120

120:                                              ; preds = %138, %118
  %121 = load i32, i32* %13, align 4
  %122 = load i32, i32* %12, align 4
  %123 = icmp slt i32 %121, %122
  br i1 %123, label %124, label %141

124:                                              ; preds = %120
  %125 = load i32, i32* %13, align 4
  %126 = sext i32 %125 to i64
  %127 = getelementptr inbounds i32, i32* %52, i64 %126
  %128 = load i32, i32* %127, align 4
  %129 = load i32, i32* %10, align 4
  %130 = icmp slt i32 %128, %129
  br i1 %130, label %131, label %137

131:                                              ; preds = %124
  %132 = load i32, i32* %13, align 4
  %133 = sext i32 %132 to i64
  %134 = getelementptr inbounds i32, i32* %52, i64 %133
  %135 = load i32, i32* %134, align 4
  store i32 %135, i32* %10, align 4
  %136 = load i32, i32* %13, align 4
  store i32 %136, i32* %9, align 4
  br label %137

137:                                              ; preds = %131, %124
  br label %138

138:                                              ; preds = %137
  %139 = load i32, i32* %13, align 4
  %140 = add nsw i32 %139, 1
  store i32 %140, i32* %13, align 4
  br label %120

141:                                              ; preds = %120
  %142 = load i32, i32* %9, align 4
  %143 = load %struct.TYPE_9__*, %struct.TYPE_9__** %4, align 8
  %144 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %143, i32 0, i32 1
  %145 = load i32*, i32** %144, align 8
  %146 = load i64, i64* @IVTC_LATEST, align 8
  %147 = getelementptr inbounds i32, i32* %145, i64 %146
  store i32 %142, i32* %147, align 4
  %148 = load i64, i64* @CADENCE_POS_PROGRESSIVE, align 8
  %149 = getelementptr inbounds i32, i32* %52, i64 %148
  %150 = load i32, i32* %149, align 4
  store i32 %150, i32* %14, align 4
  store i32 0, i32* %15, align 4
  %151 = load i32, i32* %9, align 4
  %152 = sext i32 %151 to i64
  %153 = load i64, i64* @CADENCE_POS_PROGRESSIVE, align 8
  %154 = icmp ne i64 %152, %153
  br i1 %154, label %155, label %159

155:                                              ; preds = %141
  %156 = load i64, i64* @CADENCE_POS_PROGRESSIVE, align 8
  %157 = getelementptr inbounds i32, i32* %52, i64 %156
  %158 = load i32, i32* %157, align 4
  store i32 %158, i32* %15, align 4
  br label %159

159:                                              ; preds = %155, %141
  %160 = load i32, i32* %11, align 4
  store i32 %160, i32* %16, align 4
  br label %161

161:                                              ; preds = %183, %159
  %162 = load i32, i32* %16, align 4
  %163 = load i32, i32* %12, align 4
  %164 = icmp slt i32 %162, %163
  br i1 %164, label %165, label %186

165:                                              ; preds = %161
  %166 = load i32, i32* %16, align 4
  %167 = sext i32 %166 to i64
  %168 = getelementptr inbounds i32, i32* %52, i64 %167
  %169 = load i32, i32* %168, align 4
  %170 = load i32, i32* %14, align 4
  %171 = add nsw i32 %170, %169
  store i32 %171, i32* %14, align 4
  %172 = load i32, i32* %16, align 4
  %173 = load i32, i32* %9, align 4
  %174 = icmp ne i32 %172, %173
  br i1 %174, label %175, label %182

175:                                              ; preds = %165
  %176 = load i32, i32* %16, align 4
  %177 = sext i32 %176 to i64
  %178 = getelementptr inbounds i32, i32* %52, i64 %177
  %179 = load i32, i32* %178, align 4
  %180 = load i32, i32* %15, align 4
  %181 = add nsw i32 %180, %179
  store i32 %181, i32* %15, align 4
  br label %182

182:                                              ; preds = %175, %165
  br label %183

183:                                              ; preds = %182
  %184 = load i32, i32* %16, align 4
  %185 = add nsw i32 %184, 1
  store i32 %185, i32* %16, align 4
  br label %161

186:                                              ; preds = %161
  %187 = load i32, i32* %12, align 4
  %188 = load i32, i32* %11, align 4
  %189 = sub nsw i32 %187, %188
  %190 = add nsw i32 %189, 1
  %191 = load i32, i32* %14, align 4
  %192 = sdiv i32 %191, %190
  store i32 %192, i32* %14, align 4
  %193 = load i32, i32* %12, align 4
  %194 = load i32, i32* %11, align 4
  %195 = sub nsw i32 %193, %194
  %196 = load i32, i32* %15, align 4
  %197 = sdiv i32 %196, %195
  store i32 %197, i32* %15, align 4
  %198 = load i32, i32* %15, align 4
  %199 = sitofp i32 %198 to double
  %200 = load i32, i32* %14, align 4
  %201 = sitofp i32 %200 to double
  %202 = fdiv double %199, %201
  store double %202, double* %17, align 8
  %203 = load i64, i64* @CADENCE_POS_PROGRESSIVE, align 8
  %204 = getelementptr inbounds i32, i32* %52, i64 %203
  %205 = load i32, i32* %204, align 4
  %206 = load i32, i32* %14, align 4
  %207 = sub nsw i32 %205, %206
  store i32 %207, i32* %18, align 4
  %208 = load i32, i32* %18, align 4
  %209 = load i32, i32* %18, align 4
  %210 = mul nsw i32 %208, %209
  store i32 %210, i32* %19, align 4
  store i32 0, i32* %20, align 4
  %211 = load i32, i32* %9, align 4
  %212 = sext i32 %211 to i64
  %213 = load i64, i64* @CADENCE_POS_PROGRESSIVE, align 8
  %214 = icmp ne i64 %212, %213
  br i1 %214, label %215, label %224

215:                                              ; preds = %186
  %216 = load i64, i64* @CADENCE_POS_PROGRESSIVE, align 8
  %217 = getelementptr inbounds i32, i32* %52, i64 %216
  %218 = load i32, i32* %217, align 4
  %219 = load i32, i32* %15, align 4
  %220 = sub nsw i32 %218, %219
  store i32 %220, i32* %21, align 4
  %221 = load i32, i32* %21, align 4
  %222 = load i32, i32* %21, align 4
  %223 = mul nsw i32 %221, %222
  store i32 %223, i32* %20, align 4
  br label %224

224:                                              ; preds = %215, %186
  %225 = load i32, i32* %11, align 4
  store i32 %225, i32* %22, align 4
  br label %226

226:                                              ; preds = %258, %224
  %227 = load i32, i32* %22, align 4
  %228 = load i32, i32* %12, align 4
  %229 = icmp slt i32 %227, %228
  br i1 %229, label %230, label %261

230:                                              ; preds = %226
  %231 = load i32, i32* %22, align 4
  %232 = sext i32 %231 to i64
  %233 = getelementptr inbounds i32, i32* %52, i64 %232
  %234 = load i32, i32* %233, align 4
  %235 = load i32, i32* %14, align 4
  %236 = sub nsw i32 %234, %235
  store i32 %236, i32* %18, align 4
  %237 = load i32, i32* %18, align 4
  %238 = load i32, i32* %18, align 4
  %239 = mul nsw i32 %237, %238
  %240 = load i32, i32* %19, align 4
  %241 = add nsw i32 %240, %239
  store i32 %241, i32* %19, align 4
  %242 = load i32, i32* %22, align 4
  %243 = load i32, i32* %9, align 4
  %244 = icmp ne i32 %242, %243
  br i1 %244, label %245, label %257

245:                                              ; preds = %230
  %246 = load i32, i32* %22, align 4
  %247 = sext i32 %246 to i64
  %248 = getelementptr inbounds i32, i32* %52, i64 %247
  %249 = load i32, i32* %248, align 4
  %250 = load i32, i32* %15, align 4
  %251 = sub nsw i32 %249, %250
  store i32 %251, i32* %23, align 4
  %252 = load i32, i32* %23, align 4
  %253 = load i32, i32* %23, align 4
  %254 = mul nsw i32 %252, %253
  %255 = load i32, i32* %20, align 4
  %256 = add nsw i32 %255, %254
  store i32 %256, i32* %20, align 4
  br label %257

257:                                              ; preds = %245, %230
  br label %258

258:                                              ; preds = %257
  %259 = load i32, i32* %22, align 4
  %260 = add nsw i32 %259, 1
  store i32 %260, i32* %22, align 4
  br label %226

261:                                              ; preds = %226
  %262 = load i32, i32* %12, align 4
  %263 = load i32, i32* %11, align 4
  %264 = sub nsw i32 %262, %263
  %265 = add nsw i32 %264, 1
  %266 = load i32, i32* %19, align 4
  %267 = sdiv i32 %266, %265
  store i32 %267, i32* %19, align 4
  %268 = load i32, i32* %12, align 4
  %269 = load i32, i32* %11, align 4
  %270 = sub nsw i32 %268, %269
  %271 = load i32, i32* %20, align 4
  %272 = sdiv i32 %271, %270
  store i32 %272, i32* %20, align 4
  %273 = load %struct.TYPE_9__*, %struct.TYPE_9__** %4, align 8
  %274 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %273, i32 0, i32 2
  %275 = load i32*, i32** %274, align 8
  %276 = load i64, i64* @IVTC_LATEST, align 8
  %277 = sub i64 %276, 1
  %278 = getelementptr inbounds i32, i32* %275, i64 %277
  %279 = load i32, i32* %278, align 4
  store i32 %279, i32* %24, align 4
  %280 = load i32*, i32** @pi_detected_pos_to_cadence_pos, align 8
  %281 = load i32, i32* %9, align 4
  %282 = sext i32 %281 to i64
  %283 = getelementptr inbounds i32, i32* %280, i64 %282
  %284 = load i32, i32* %283, align 4
  store i32 %284, i32* %25, align 4
  store i32 0, i32* %26, align 4
  %285 = load i32, i32* %24, align 4
  %286 = load i32, i32* @CADENCE_POS_INVALID, align 4
  %287 = icmp ne i32 %285, %286
  br i1 %287, label %288, label %300

288:                                              ; preds = %261
  %289 = load i32*, i32** @pi_detected_pos_to_cadence_pos, align 8
  %290 = load i32, i32* %24, align 4
  %291 = sext i32 %290 to i64
  %292 = getelementptr inbounds i32, i32* %289, i64 %291
  %293 = load i32, i32* %292, align 4
  store i32 %293, i32* %27, align 4
  %294 = load i32, i32* %25, align 4
  %295 = load i32, i32* %27, align 4
  %296 = add nsw i32 %295, 1
  %297 = srem i32 %296, 5
  %298 = icmp eq i32 %294, %297
  %299 = zext i1 %298 to i32
  store i32 %299, i32* %26, align 4
  br label %300

300:                                              ; preds = %288, %261
  %301 = load %struct.TYPE_9__*, %struct.TYPE_9__** %4, align 8
  %302 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %301, i32 0, i32 3
  %303 = load i32*, i32** %302, align 8
  %304 = load i64, i64* @IVTC_LATEST, align 8
  %305 = getelementptr inbounds i32, i32* %303, i64 %304
  %306 = load i32, i32* %305, align 4
  store i32 %306, i32* %28, align 4
  %307 = load i32, i32* %28, align 4
  %308 = icmp sgt i32 %307, 0
  br i1 %308, label %309, label %324

309:                                              ; preds = %300
  %310 = load double, double* %17, align 8
  %311 = fcmp ogt double %310, 1.005000e+00
  br i1 %311, label %312, label %324

312:                                              ; preds = %309
  %313 = load i32, i32* %26, align 4
  %314 = icmp ne i32 %313, 0
  br i1 %314, label %322, label %315

315:                                              ; preds = %312
  %316 = load i32, i32* %19, align 4
  %317 = sitofp i32 %316 to double
  %318 = load i32, i32* %20, align 4
  %319 = sitofp i32 %318 to double
  %320 = fmul double 1.170000e+00, %319
  %321 = fcmp ogt double %317, %320
  br label %322

322:                                              ; preds = %315, %312
  %323 = phi i1 [ true, %312 ], [ %321, %315 ]
  br label %324

324:                                              ; preds = %322, %309, %300
  %325 = phi i1 [ false, %309 ], [ false, %300 ], [ %323, %322 ]
  %326 = zext i1 %325 to i32
  store i32 %326, i32* %29, align 4
  %327 = load i32, i32* %29, align 4
  %328 = load %struct.TYPE_9__*, %struct.TYPE_9__** %4, align 8
  %329 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %328, i32 0, i32 4
  %330 = load i32*, i32** %329, align 8
  %331 = load i64, i64* @IVTC_LATEST, align 8
  %332 = getelementptr inbounds i32, i32* %330, i64 %331
  store i32 %327, i32* %332, align 4
  %333 = load i8*, i8** %6, align 8
  call void @llvm.stackrestore(i8* %333)
  ret void
}

declare dso_local i32 @assert(i32) #1

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
